--- a/layouts/index.html
+++ b/layouts/index.html
@@ -84,7 +84,7 @@
               <div class="wave" data-progress="{{.progress}}"></div>
             </div>
             <div class="card-footer bg-white">
-              <h4 class="card-title">{{.title }} ({{.progress}})</h4>
+              <h4 class="card-title">{{.title }} ({{.experience}})</h4>
             </div>
           </div>
         </div>
@@ -130,7 +130,7 @@
           <h2 class="section-title">{{ .title | markdownify }}</h2>
         </div>
         {{ range .item }}
-        <div class="col-lg-6 col-md-6 mb-80">
+        <div class="col-lg-12">
           <div class="d-flex">
             <div class="mr-lg-5 mr-3">
               <i class="ti-medall icon icon-light icon-bg bg-white shadow rounded-circle d-block"></i>
